# service

./: db.sqlite3  manage.py  pyproject.toml  test.py
mk_register/: asgi.py  settings.py  urls.py  wsgi.py
reservation/: admin.py  forms.py  models.py  urls.py  views.py
reservation/migrations/: 0001_initial.py  0002_alter_staffprofile_phone_number_alter_user_role.py  0003_alter_order_time_alter_service_price.py
reservation/templates/: test.html
reservation/templates/reservation/: base.html  choose_date.html  choose_service.html  index.html  login.html  message.html  order.html  payment.html  signup.html
staticfiles/: styles.css
